# anvil

./: README.md  anvil_recon_strategy.md  index.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.codex/: AGENTS.md
.github/workflows/: ci.yml
src/: API.ts  Anvil.ts  AnvilAPI.ts  Anvil_Old.ts  LayerEngine.ts  patch.ts  types.ts
src/buffer/: Buffer.ts  DiffsController.ts  LayerDiffsController.ts  LayerTilesController.ts  PixelBuffer.ts  RgbaBuffer.ts  TilesController.ts
src/diff/: LayerDiffs.ts  LayerDiffsController.ts
src/lapse/: Lapse.ts
src/ops/: Packing.ts  Shape.ts
src/ops_wasm/: Cargo.toml
src/ops_wasm/pkg/: anvil_ops_wasm.d.ts  anvil_ops_wasm.js  anvil_ops_wasm_bg.js  anvil_ops_wasm_bg.wasm  anvil_ops_wasm_bg.wasm.d.ts  package.json
src/ops_wasm/src/: lib.rs
src/ops_wasm/src/buffer/: mod.rs  packing.rs  patch_buffer_rgba.rs  resize.rs  rgba_buffer.rs
src/ops_wasm/src/fill/: area_fill.rs  flood_fill.rs  mod.rs
src/ops_wasm/src/rgba/: base.rs  fill.rs  resize.rs
src/tile/: LayerTiles.ts  LayerTilesController.ts
src/types/: types.ts
src/wasm/: Cargo.toml
src/wasm/pkg/: anvil_wasm.d.ts  anvil_wasm.js  anvil_wasm_bg.js  anvil_wasm_bg.wasm  anvil_wasm_bg.wasm.d.ts  package.json
src/wasm/src/rgba/: base.rs  export.rs  fill.rs  mod.rs  rect.rs  resize.rs
test/: Anvil.test.ts  LayerDiffs.test.ts  LayerTiles.test.ts  Pattern.test.ts  PatternMaskCache.test.ts  PixelBuffer.test.ts  PutShapeLine.test.ts  README.md  anvil_test_recon.md
test/bench/: benchTest.bench.ts
test/integration/: Anvil.integration.test.ts  (+1 more)
(+34 files in other folders)
